--- a/SPEAR/package.json
+++ b/SPEAR/package.json
@@ -11,23 +11,28 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animation": "^4.0.0-beta.8",
     "@angular/animations": "^6.0.3",
+    "@angular/cdk": "^7.1.1",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
     "@angular/core": "^6.0.3",
-    "@angular/forms": "^6.0.3",
-    "@angular/http": "^6.0.3",
-    "@angular/platform-browser": "^6.0.3",
-    "@angular/platform-browser-dynamic": "^6.0.3",
-    "@angular/router": "^6.0.3",
+    "@angular/flex-layout": "6.0.0-beta.17",
+    "@angular/forms": "^6.1.10",
+    "@angular/http": "^6.1.10",
+    "@angular/material": "^7.3.2",
+    "@angular/platform-browser": "^6.1.10",
+    "@angular/platform-browser-dynamic": "^6.1.10",
+    "@angular/router": "^6.1.10",
     "core-js": "^2.5.4",
-    "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26"
+    "material-design-icons": "^3.0.1",
+    "rxjs": "6.0.0",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^6.0.3",
     "@angular-devkit/build-angular": "~0.7.0-beta.0",
-    "typescript": "~2.7.2",
+    "typescript": "^2.9.2",
     "@angular/cli": "~6.1.0-beta.0",
     "@angular/language-service": "^6.0.3",
     "@types/jasmine": "~2.8.6",
