--- a/SPEAR/package.json
+++ b/SPEAR/package.json
@@ -17,7 +17,7 @@
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
     "@angular/core": "^6.0.3",
-    "@angular/flex-layout": "6.0.0-beta.17",
+    "@angular/flex-layout": "^6.0.0-beta.17",
     "@angular/forms": "^6.1.10",
     "@angular/http": "^6.1.10",
     "@angular/material": "^7.3.2",
