--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,3 @@
 steps:
   - name: gcr.io/cloud-builders/gsutil
-    args: ["-m", "rsync", "-r", "-c", "-d", "./SPEAR/dist", "gs://www.spearautomation.com"]
+    args: ["ng build --prod", "-m", "rsync", "-r", "-c", "-d", "./SPEAR/dist", "gs://www.spearautomation.com"]
